tests/ui/argument-suggestions/wrong-highlight-span-extra-arguments-147070.stderr
error[E0061]: this function takes 6 arguments but 7 arguments were supplied
  --> $DIR/wrong-highlight-span-extra-arguments-147070.rs:17:15
   |
LL |     let foo = Thingie::new(
   |               ^^^^^^^^^^^^
...
LL |         String::from(""),
   |         ---------------- unexpected argument #7 of type `String`
   |
note: associated function defined here
  --> $DIR/wrong-highlight-span-extra-arguments-147070.rs:4:19
   |
LL |     pub(crate) fn new(
   |                   ^^^
help: remove the extra argument
   |
LL -         String::from(""),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0061`.
